# Repo-Interrogator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  TODO.md  pyproject.toml  repo_mcp.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_task.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.repo_mcp/: audit.jsonl
docs/: AI_INTEGRATION.md  CONFIG.md  INSTALL.md  PERFORMANCE_PLAYBOOK.md  SECURITY.md  TRIAGE.md  TROUBLESHOOTING.md  USAGE.md  release.md
docs/adr/: ADR-0001-integration-first-mcp.md  ADR-0002-single-repo-instance.md  ADR-0003-deterministic-only-server.md  ADR-0004-python-first-adapters.md  ADR-0005-stdio-only-transport.md  ADR-0006-repo-sandboxing.md  ADR-0007-context-bundles.md  ADR-0008-ruff-tooling.md  ADR-0009-no-tree-sitter-for-now.md  ADR-0010-disallow-external-toolchain-integration-for-now.md  ADR-0011-outline-only-no-language-aware-chunking-for-now.md  ADR-0012-declaration-based-outline-semantics-v2.md  ADR-0013-deterministic-cross-file-references-v25.md  ADR-0014-noise-directory-exclusion-and-shared-discovery-filters.md  ADR-0015-opt-in-performance-profiling-harness.md  ADR-0016-bounded-why-not-selected-and-operator-presets.md  ADR-0017-mcp-jsonrpc2-compliance.md  ADR-0018-optional-semantic-search-via-onnx.md
docs/roadmap/: archive-2026-02-10-v25-and-perf-completed.md  archive-2026-06-30-usefulness-dx-and-jsonrpc2.md
examples/: repo_mcp.toml
scripts/: benchmark_workflow.py  generate_release_notes.py  perf_guardrail_check.py  validate_workflow.py
src/repo_mcp/: __init__.py  config.py  server.py
tests/: conftest.py  helpers.py  test_project_layout.py  test_smoke_imports.py
tests/integration/: test_bundle_retrieval_mode.py  test_bundle_with_non_python_outline.py  test_cross_platform_output_stability.py  test_docs_workflow_recipes_contract.py  test_mcp_protocol.py  test_multilanguage_outline_determinism.py  test_no_network_assumption.py  test_policy_effective_behavior.py  test_refresh_index_roundtrip.py  test_refresh_profile_fields.py  test_repo_audit_log_tool.py  test_repo_build_context_bundle_tool.py  test_repo_find_definition_tool.py  test_repo_outline_multilanguage_selection.py  test_repo_outline_tool.py  test_repo_references_adapter_grouping.py  (+7 more)
(+134 files in other folders)
