[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-interrogator"
version = "0.1.0"
description = "Local-first deterministic MCP server for interrogating a single repository."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Repo Interrogator Authors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]
release = [
  "build>=1.2.2",
  "twine>=5.1",
]

[project.scripts]
repo-mcp = "repo_mcp.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
